[package]
authors = ["rise0chen <rise0chen@163.com>"]
categories = ["concurrency"]
description = "Async Atomic Channel"
edition = "2018"
keywords = ["atomic", "channel", "no-heap"]
license-file = "LICENSE"
name = "async_ach"
readme = "./README.md"
repository = "https://github.com/rise0chen/async_ach.git"
version = "0.1.2"

[features]
alloc = ["async_ach-spsc/alloc", "async_ach-mpmc/alloc"]

[dependencies]
async_ach-cell = {version = "0.1", path = "../cell"}
async_ach-mpmc = {version = "0.1", path = "../mpmc"}
async_ach-notify = {version = "0.1", path = "../notify"}
async_ach-ring = {version = "0.1", path = "../ring"}
async_ach-spsc = {version = "0.1", path = "../spsc"}
async_ach-waker = {version = "0.1", path = "../waker"}
async_ach-watch = {version = "0.1", path = "../watch"}
