[package]
authors = ["rise0chen <rise0chen@163.com>"]
categories = ["concurrency"]
description = "Async Atomic Channel"
edition = "2018"
keywords = ["atomic", "channel", "no-heap"]
license-file = "LICENSE"
name = "async_ach-mpmc"
readme = "./README.md"
repository = "https://github.com/rise0chen/async_ach.git"
version = "0.1.3"

[features]
alloc = []
default = []

[dependencies]
ach-util = "0.1"
async_ach-ring = {version = "0.1", path = "../ring"}

[dev-dependencies]
async-channel = "1"
criterion = {version = "0", features = ["async_futures"]}
flume = "0"
futures-channel = "0"
futures-executor = "0"
futures-test = "0"
futures-util = "0"
tokio = {version = "1", features = ["sync"]}

[[bench]]
harness = false
name = "mpsc"
