[package]
authors = ["rise0chen <rise0chen@163.com>"]
categories = ["concurrency"]
description = "Async Atomic Channel"
edition = "2018"
keywords = ["atomic", "channel", "no-heap"]
license-file = "LICENSE"
name = "async_ach-notify"
readme = "./README.md"
repository = "https://github.com/rise0chen/async_ach.git"
version = "0.1.5"

[dependencies]
async_ach-waker = {version = "0.1", path = "../waker"}
futures-util = {version = "0.3", default-features = false}

[dev-dependencies]
futures-executor = {version = "0", features = ["thread-pool"]}
futures-test = "0"
