[package]
authors = ["rise0chen <rise0chen@163.com>"]
categories = ["concurrency"]
description = "Async Atomic Channel"
edition = "2018"
keywords = ["atomic", "channel", "no-heap"]
license-file = "LICENSE"
name = "async_ach-notify"
readme = "./README.md"
repository = "https://github.com/rise0chen/async_ach.git"
version = "0.1.5"

[dependencies]
async_ach-waker = {version = "0.2", path = "../waker"}
futures-util = {version = "0.3", default-features = false}

[dev-dependencies]
ach-ring = "0.1"
ach-util = "0.1"
criterion = {version = "0", features = ["async_futures"]}
event-listener = "2"
futures-executor = {version = "0", features = ["thread-pool"]}
futures-test = "0"
futures-util = "0"
tokio = {version = "1", features = ["sync"]}

[[bench]]
harness = false
name = "mpmc"
