[package]
authors = ["rise0chen <rise0chen@163.com>"]
categories = ["concurrency"]
description = "Async Atomic Channel"
edition = "2018"
keywords = ["atomic", "channel", "no-heap"]
license-file = "LICENSE"
name = "async_ach-pubsub"
readme = "./README.md"
repository = "https://github.com/rise0chen/async_ach.git"
version = "0.2.0"

[features]
alloc = ["ach-pubsub/alloc"]
default = []

[dependencies]
ach-pubsub = "0.2"
ach-util = "0.1"
async_ach-notify = {version = "0.1", path = "../notify"}
futures-util = {version = "0.3", default-features = false}

[dev-dependencies]
futures-executor = {version = "0", features = ["thread-pool"]}
futures-test = "0"
