[package]
authors = ["rise0chen <rise0chen@163.com>"]
categories = ["concurrency"]
description = "Async Atomic Channel"
edition = "2018"
keywords = ["atomic", "channel", "no-heap"]
license-file = "LICENSE"
name = "async_ach-waker"
readme = "./README.md"
repository = "https://github.com/rise0chen/async_ach.git"
version = "0.2.1"

[dependencies]
ach-array = "0.1"
ach-linked = "0.2"
ach-option = "0.1"
